force-app/main/default/objects/Evaluation_Form__c/fields/Case_Record__c.field-meta.xml
<CustomField>
    <fullName>Case_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Record</label>
    <referenceTo>Case_Record__c</referenceTo>
    <relationshipLabel>Evaluation Forms</relationshipLabel>
    <relationshipName>Evaluation_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>