force-app/main/default/objects/Evaluation_Form__c/fields/Competencies_Need_Improvement__c.field-meta.xml
<CustomField>
    <fullName>Competencies_Need_Improvement__c</fullName>
    <label>Competencies Need Improvement</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Conflict Management</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Professionalism</fullName>
            </value>
            <value>
                <fullName>Teamwork</fullName>
            </value>
            <value>
                <fullName>Time Management,</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>