force-app/main/default/objects/Evaluation_Form__c/fields/Explanation_for_Needed_Improvement__c.field-meta.xml
<CustomField>
    <fullName>Explanation_for_Needed_Improvement__c</fullName>
    <label>Explanation for Needed Improvement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>