force-app/main/default/objects/Evaluation_Form__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Evaluation Forms</relationshipLabel>
    <relationshipName>Evaluation_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>