force-app/main/default/objects/Evaluation_Form__c/fields/Question_02__c.field-meta.xml
<CustomField>
    <fullName>Question_02__c</fullName>
    <label>Question 02</label>
    <length>200</length>
    <type>Text</type>
</CustomField>