force-app/main/default/objects/Evaluation_Form__c/recordTypes/Check_In_and_Reception_Internship.recordType-meta.xml
<RecordType>
    <fullName>Check_In_and_Reception_Internship</fullName>
    <active>true</active>
    <label>Check-In and Reception Internship</label>
</RecordType>