force-app/main/default/objects/Evaluation_Form__c/recordTypes/Check_In_and_Reception_Internship_2_0.recordType-meta.xml
<RecordType>
    <fullName>Check_In_and_Reception_Internship_2_0</fullName>
    <active>true</active>
    <label>Check-In and Reception Internship 2.0</label>
</RecordType>