force-app/main/default/objects/Evaluation_Form__c/recordTypes/Cleanslate_Intern_Evaluation_1_0.recordType-meta.xml
<RecordType>
    <fullName>Cleanslate_Intern_Evaluation_1_0</fullName>
    <active>false</active>
    <label>Cleanslate Intern Evaluation 1.0</label>
</RecordType>