force-app/main/default/objects/Evaluation_Form__c/recordTypes/Competency_Evaluation.recordType-meta.xml
<RecordType>
    <fullName>Competency_Evaluation</fullName>
    <active>true</active>
    <label>Competency Evaluation</label>
</RecordType>