force-app/main/default/objects/Evaluation_Form__c/recordTypes/Employer_Post_Sourcing_Institute_Survey_3_0.recordType-meta.xml
<RecordType>
    <fullName>Employer_Post_Sourcing_Institute_Survey_3_0</fullName>
    <active>false</active>
    <label>Employer Post-Sourcing Institute Survey 3.0</label>
</RecordType>