force-app/main/default/objects/Evaluation_Form__c/recordTypes/Employer_Pre_Institute_Survey_1_0.recordType-meta.xml
<RecordType>
    <fullName>Employer_Pre_Institute_Survey_1_0</fullName>
    <active>false</active>
    <label>Employer Pre-Institute Survey 1.0</label>
</RecordType>