force-app/main/default/objects/Evaluation_Form__c/recordTypes/Inclusion_Action_Lab_Pre_Survey_2_0_Short.recordType-meta.xml
<RecordType>
    <fullName>Inclusion_Action_Lab_Pre_Survey_2_0_Short</fullName>
    <active>true</active>
    <description>Shortened version updated 8.15.22 - https://thecaraprogram.sharepoint.com/:w:/s/Expansion/EcMNSOFDD9hHqMm7L7saiIABy7wwzhrGYaQdv0SE1BbrmA?e=HsjyRc</description>
    <label>Inclusion Action Lab Pre-Survey 2.0 (Short)</label>
</RecordType>