force-app/main/default/objects/Evaluation_Form__c/recordTypes/Individual_Retention_Post_Institute_Survey_2_0.recordType-meta.xml
<RecordType>
    <fullName>Individual_Retention_Post_Institute_Survey_2_0</fullName>
    <active>false</active>
    <label>Individual Retention Post-Institute Survey 2.0</label>
</RecordType>