force-app/main/default/objects/Evaluation_Form__c/recordTypes/Mock_Interview_Feedback.recordType-meta.xml
<RecordType>
    <fullName>Mock_Interview_Feedback</fullName>
    <active>true</active>
    <label>Mock Interview Feedback</label>
</RecordType>