force-app/main/default/objects/Evaluation_Form__c/recordTypes/Practitioner_Pre_Institute_Survey_1_0.recordType-meta.xml
<RecordType>
    <fullName>Practitioner_Pre_Institute_Survey_1_0</fullName>
    <active>true</active>
    <label>Practitioner Pre-Institute Survey 1.0</label>
</RecordType>